// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainNavigation Should render correctly 1`] = `
<div>
  <nav
    class="main-navigation__wrapper"
  >
    <button
      class="main-navigation__hamburger"
      title="Menu"
      type="button"
    >
      <span
        class="main-navigation__icon"
      />
    </button>
    <ul
      class="main-navigation__container"
    >
      <li
        class="main-navigation__item"
      >
        <a
          href="/pt-BR"
        >
          <span
            class="main-navigation__link"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <a
          href="/pt-BR/blog"
        >
          <span
            class="main-navigation__link"
          >
            Blog
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <a
          href="/sobre-mim"
        >
          <span
            class="main-navigation__link active"
          >
            Sobre mim
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <button
          class="language-selector__button"
          type="button"
        >
          <img
            alt="Active language pt-BR"
            data-nimg="1"
            decoding="async"
            height="22"
            loading="lazy"
            src="/_next/image?url=%2Fimg%2Fpt-BR.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg%2Fpt-BR.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg%2Fpt-BR.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="29"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`MainNavigation Should render correctly in en 1`] = `
<div>
  <nav
    class="main-navigation__wrapper"
  >
    <button
      class="main-navigation__hamburger"
      title="Menu"
      type="button"
    >
      <span
        class="main-navigation__icon"
      />
    </button>
    <ul
      class="main-navigation__container"
    >
      <li
        class="main-navigation__item"
      >
        <a
          href="/en"
        >
          <span
            class="main-navigation__link"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <a
          href="/en/blog"
        >
          <span
            class="main-navigation__link"
          >
            Blog
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <a
          href="/about-me"
        >
          <span
            class="main-navigation__link"
          >
            About me
          </span>
        </a>
      </li>
      <li
        class="main-navigation__item"
      >
        <button
          class="language-selector__button"
          type="button"
        >
          <img
            alt="Active language en"
            data-nimg="1"
            decoding="async"
            height="22"
            loading="lazy"
            src="/_next/image?url=%2Fimg%2Fen.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg%2Fen.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg%2Fen.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="29"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
